--- a/DFL_Colab_1-0.ipynb
+++ b/DFL_Colab_1-0.ipynb
@@ -3,17 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "DFL_Colab_1-0.ipynb",
+      "name": "KK2共享网盘",
       "provenance": [],
-      "collapsed_sections": [
-        "BDg_jiQ9adQe",
-        "JuVn21kt40Gw",
-        "hqwOlJG4MdLC",
-        "tUNVcbujhm00",
-        "WTuyUxgdLA13",
-        "avAcSL_uvtq_"
-      ],
-      "toc_visible": true
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -25,7 +18,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0cKdTCuv4tXh",
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/kinking2008/Workspace/blob/master/douwangpan.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KWQMLYlFrTXz",
         "colab_type": "text"
       },
       "source": [
